# ASAP_DPO_Finetuning

./: .gitignore  .project-metadata.yaml  LICENSE  README.md  catalog-entry.yaml  config.json  dpo_training.ipynb  merge_lora.py  monitor_training.py  pyproject.toml  requirements.txt  run.bat  run_inference.py  train_llama32_sft.py
00_configs/: dpo.json  secrets.toml
01_configs/: config.json
01_data/: gpu_check.py
01_data/dpo/: train.jsonl
01_data/eval/: eval_prompts.jsonl
02_src/: merge_lora.py  monitor_training.py  run_inference.py  train_dpo.py
02_src/eval/: evaluate.py
02_src/utils/: __init__.py  data_utils.py  formatting.py
03_scripts/: convert_reward_to_dpo.py  run.bat
03_src/: merge_lora.py  monitor_training.py  run_inference.py  train_llama32_sft.py
03_src/eval/: evaluate.py
03_src/utils/: data_utils.py  formatting.py
04_installer/: install_requirements.py  requirements.txt
06_scripts/: run.bat
dataset/: sample.jsonl
utils/: __init__.py  data_utils.py  formatting.py
