[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "asap_finetuning"
version = "1.1.0"
description = "DPO + QLoRA fine-tuning for oil-and-gas abbretivation grounding on local device."
authors = [{name = "Minseok Jung", email = "minseok.jung@cloudera.com"}]
dependencies = [
    "transformers",
    "peft",
    "trl",
    "datasets",
    "accelerate",
    "bitsandbytes",
    "scipy",
    "numpy",
    "sentencepiece",
    "protobuf",
]

requires-python = ">=3.10"

[tool.setuptools]
packages = ["utils"]
package_dir = {"" = "02_src"}